assets/css/style.css
* {
  /* initial style for everything. Will be overridden where need be */
  border: none;
  margin: 0;
  padding: 0;
}

/* used to get the main title to adjust size according to screen-size. A bit clumsy, but the only method I could think of. Probably not perfect either, but seems to work. */

#encyc-header {
  font-size: 24px;
}

@media screen and (max-width: 720px) {
  #encyc-header {
    font-size: 18px;
  }
}

@media screen and (max-width: 640px) {
  #encyc-header {
    font-size: 16px;
  }
}

@media screen and (max-width: 320px) {
  #encyc-header {
    font-size: 12px;
  }
}


header {
  /* used for the top-heading */
  background-color: cadetblue;
  width: 100%;
  height: 50px;
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Stay on top */
}

body {
  background-image: url("../pictures/starfield.jpg");
  /* in case background can not be loaded, set a background color */
  background-color: black;
  /* overflow-x: hidden;  */
}

.mylink {
  background-color: red;
  text-decoration: double;
}

header h1 {
  /* h1 in the top-header */
  text-align: justify;
  text-transform: capitalize;
  color: white;
}

header h1,
h2 {
  /* headers in top bar */
  color: white;
  text-align: center;
}

header h2 {
  /* decrease the font-size of h2 in header */
  font-size: xx-small;
}

#isac-face {
  /* styles Isacs face in the top-"menu" */
  width: 50px;
  height: 50px;
  float: left;
  clear: both;
}

#main-div {
  /*centers the main div that encommpasses the whole page */
  width: 100%;
  height: 100%;
}

.center-image-horiz {
  margin-left: 25%;
  margin-right: 25%;
  width: 50%;
}

/* split1, split2, left-column, and right-column are used to split the screen horisontally into two columns. To make it easier to maintain responsiveness and the main content more visible */

.split1 {
  height: 100%;
  width: 10%;
  position: fixed;
  z-index: 1;
  top: 50px;
  overflow-x: hidden;
}

.split2 {
  height: 100%;
  width: 90%;
  position: fixed;
  z-index: 1;
  top: 50px;
  /* overflow-x: hidden; */
}


.left-column {
  left: 0;
}

.right-column {
  right: 0;
}

.main {
  color: wheat;
  position: relative;
  margin-left: 200px;
  /* Same as the width of the sidebar */
  padding: 0px 200px;
}

.sidenav {
  /* styles the sidenav */
  height: auto;
  width:auto;
  position: fixed;
  top: 60px;
  left: 0;
  overflow-x: hidden;
  padding-top: 0px;
  background-image: url("../pictures/starfield.jpg");
  /*in case background can not be loaded, set a background color */
  background-color: black;
}

.sidenav a {
  /* styles the links on the sidebar */
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: wheat;
  display: block;
}

.table-center {
  /* make sure tables are centered */
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}

table td {
  /* Remove double borders on tables */
  border-collapse: collapse;
  text-align: center;
}

.hor-row-nav {
  /* all hr should be 1px thick, solid and white as well as centered */
  border: 1px solid white;
  width: 50%;
  margin-left: 25% !important;
  margin-right: 25% !important;
}


.active {
  /* styles the current link in sidenav page */
  background-color: cadetblue;
  color: white;
}

div p {
  /* styles the p element if child of a div */
  text-align: center;
  vertical-align: top;
  color: wheat;
  font-size: large;
}

td {
  /* styles td-fields */
  text-align: left;
  vertical-align: top;
  color: wheat;
  font-size: large;
}

.p_bibliography {
  /* styles the <p> on bibliography page */
  color: wheat;
  font-size: large;
}

.robotics {
  /* styles the 3 laws of robotics on index.html */
  font-style: italic;
}

.page-title {
  /* styles the page-title (i.e. about) */
  color: aqua;
  padding-top: 60px;
  text-align: center;
  text-decoration: underline;
  font-size: xx-large;
}

#main-div {
  /*centers the main div that encommpasses the whole page */
  width: 100%;
}

fieldset {
  /* this and the following classes styles the contact-form page */
  background-image: url("../pictures/starfield.jpg");
  background-color: black;
  display: block;
  margin-left: 2px;
  margin-right: 2px;
  padding-top: 0.35em;
  padding-bottom: 0.625em;
  padding-left: 0.75em;
  padding-right: 0.75em;
  border: 2px;
}

legend {
  background-color: gray;
  color: white;
  padding: 5px 10px;
  border: 2px;
}

input {
  margin: 5px;
}

.center-form {
  text-align: center;
}

.button {
  border: 2px;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  background-color: black;
}

.black-button {
  background-color: black;
  color: white;
}

.black-button:hover {
  color: aqua;
}

.div-center {
  display: flex;
  justify-content: center;
}

#circle {
  /* makes page logo (bibliography) circular */
  width: 200px;
  height: 200px;
  border-radius: 50%;
}

.bibliography {
  /* styles the table on bibliography page */
  text-align: center;
  caption-side: top;
  color: wheat;
}

caption {
  /* styles the tables with a caption - bibliography for example */
  text-transform: capitalize;
  text-decoration: underline;
  font-size: larger;
}

ul {
  /* styles the list on quotes page. <ul> is only used there. */
  color: wheat;
  list-style-type: "→";
  font-size: larger;
}


.ol-roman {
  /* styles the list on media page. This class is only used there */
  list-style-type: upper-roman;
  color: wheat;
  margin-left: 200px;
  /* Same as the width of the sidebar */
  padding: 10px;
}

#timeline-table,
#timeline-table2,
#timeline-table3,
#timeline-table4 {
  /* styles the different "era" tables on timeline page */
  border: 1px;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}

.summary-bg {
  /* used to style the > popout menus so they stand out */
  background-color: cadetblue;
}

.from-novel {
  /* used to set the style the novel-names so they stand out (timeline page) */
  font-style: italic;
  text-transform: capitalize;
  color: white;
}

.emp-red {
  /* used to set the text-color to red on the 'pay attention to' part on the timeline page */
  color: red;
  font-size: x-large;
}

.table-bg-grey {
  /* used to set the semi-transparant table on bibliography page */
  border: ridge 1px red;
  background-color: rgba(38, 60, 156, 0.9);
  color: #FFF;
}

.table-bg-grey-no-border {
  /* used to set the semi-transparant table on timetable page */
  background-color: rgba(38, 60, 156, 0.9);
  color: #FFF;
}

/* used to style links in tables so they are clearly visible */

.links-table a:link,
a:visited {
  color: wheat;
  text-decoration: double;
}

.active-timeline {
  /* Outlines the current "page" in the table for the timeline page*/
  background-color: cadetblue;
  color: white;
}

/* hide menu by default*/

#hide-menu {
  display: none;
}

/* hide toptext when size is max 800 wide*/

@media screen and (max-width: 800px) {
  #published {
    display: none;
  }
}

/* turn on menu on small screen*/
@media screen and (max-width: 800px) {
  #hide-menu {
    display: inline-block;
  }
}

/* hide sidenav on small screen*/

@media screen and (max-width: 800px) {
  #side-nav {
    display: none;
  }
  #left-column-id {
    display: none;
  }
}

#photo-index {
  /* adds a border to the painting on index.html */
  border: 1px white solid;
}

#no-iframe-border {
  /* useed instead of frameborder="0" for the youtube-video to get it compliant */
  border:none;
}

